--- a/pages/posts.html
+++ b/pages/posts.html
@@ -1,7 +1,7 @@
 ---
 layout: page
 title: Posts
-subtitle: Sharing my thoughts.
+subtitle: Sharing my thoughts
 permalink: /posts/
 ---
 {% for post in site.posts %}
