--- a/pages/projects.html
+++ b/pages/projects.html
@@ -1,7 +1,7 @@
 ---
 layout: page
 title: Projects
-subtitle: Things I have worked on.
+subtitle: Things I have worked on
 permalink: /projects/
 ---
 
