--- a/pages/TIL.html
+++ b/pages/TIL.html
@@ -4,7 +4,7 @@ title: TIL
 subtitle: Today I Learned
 permalink: /TIL/
 ---
-{% for post in site.posts %}
+{% for post in site.TIL %}
     {% unless post.listed == false %}
    <div class="card mb-4">
         <div class="card-body">
